set(SOURCES ubuntu_application_api.cpp)

add_executable(test_android_ubuntu_app_api test_c_api.cpp)
target_link_libraries(test_android_ubuntu_app_api ubuntu_application_api EGL GLESv2)

add_executable(test_android_gps_api test_gps_api.cpp)
target_link_libraries(test_android_gps_api ubuntu_application_api)

add_executable(test_android_ubuntu_app_api_multiple_surfaces test_multiple_surfaces_event_delivery.cpp)
target_link_libraries(test_android_ubuntu_app_api_multiple_surfaces ubuntu_application_api EGL GLESv2)

add_executable(test_android_sensors_api test_sensors_api.cpp)
target_link_libraries(test_android_sensors_api ubuntu_application_api)

add_executable(test_android_ubuntu_session_api test_session_c_api.cpp)
target_link_libraries(test_android_ubuntu_session_api ubuntu_application_api)

install(TARGETS
	test_android_ubuntu_app_api
	test_android_gps_api
	test_android_ubuntu_app_api_multiple_surfaces
	test_android_sensors_api
	test_android_ubuntu_session_api
	DESTINATION bin
)
